--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -71,10 +71,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 -AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
--AxisMappings=(AxisName="MoveUp",Key=W,Scale=1.000000)
+-AxisMappings=(AxisName="MoveUp",Key=R,Scale=1.000000)
 -AxisMappings=(AxisName="MoveUp",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveUp",Key=Up,Scale=1.000000)
--AxisMappings=(AxisName="MoveUp",Key=Down,Scale=1.000000)
+-AxisMappings=(AxisName="MoveUp",Key=Down,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
@@ -88,6 +88,8 @@ bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
+-ConsoleKeys=
 +ConsoleKeys=Tilde
++ConsoleKeys=|
 
 
